--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,3 +5,8 @@
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=2
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
